added safeguard to prevent wrong archieval
