# swagger.json
@@ -4069,6 +4069,7 @@
                 "created_at",
                 "features",
                 "id",
+                "is_personal",
                 "name",
                 "updated_at"
             ],
@@ -4090,6 +4091,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "is_personal": {
+                    "type": "boolean"
                 },
                 "name": {
                     "type": "string"
@@ -4209,6 +4213,7 @@
                 "created_at",
                 "features",
                 "id",
+                "is_personal",
                 "name",
                 "role",
                 "status",
@@ -4232,6 +4237,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "is_personal": {
+                    "type": "boolean"
                 },
                 "joined_at": {
                     "type": "string"
